link to gallery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>GIT</title>
 </head>
 <body>
-    
+    <h1>Галерея</h1>
+    <button>
+        <a href="./gallery.html">В галлерею</a>
+    </button>
 </body>
 </html>
